fix: Java 17 미지원 API getFirst 를 get(0) 으로 교체